--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,14 +60,20 @@ slack-sdk = "3.17.0"
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
 coverage = {extras = ["toml"], version = "^6.5.0"}
-flake8 = "^4.0.1"
 isort = "^5.10.1"
 codecov = "^2.1.11"
 responses = "^0.12.1"
 beautifulsoup4 = "^4.9.3"
+ruff = "^0.0.166"
 
 [tool.black]
 line-length = 119
+
+[tool.ruff]
+line-length = 120
+select = ["E", "F", "W"]
+ignore = ["E501", "F405"]
+fix = true
 
 [tool.isort]
 multi_line_output = 3
