--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ jobs:
   test:
     name: Test
     env:
-      python-version: "3.9.x"
       pg-version: "14"
       postgis-version: "3.2"
       redis-version: "6.2"
@@ -13,6 +12,9 @@ jobs:
       rpindexer-version: "7.5.0"
       mailroom-version: "7.5.33"
       DJANGO_SETTINGS_MODULE: temba.settings_ci
+    strategy:
+      matrix:
+        python-version: ["3.9.x", "3.10.x"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -36,7 +38,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ env.python-version }}
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -69,7 +71,7 @@ jobs:
           wget https://github.com/nyaruka/rp-indexer/releases/download/v${{ env.rpindexer-version }}/rp-indexer_${{ env.rpindexer-version }}_linux_amd64.tar.gz
           tar -xvf rp-indexer_${{ env.rpindexer-version }}_linux_amd64.tar.gz rp-indexer
           # fetch, extract and start mailroom
-          wget https://github.com/nyaruka/mailroom/releases/download/v${{ env.mailroom-version }}/mailroom_${{ env.mailroom-version }}_linux_amd64.tar.gz
+          wget https://github.com/rapidpro/mailroom/releases/download/v${{ env.mailroom-version }}/mailroom_${{ env.mailroom-version }}_linux_amd64.tar.gz
           tar -xvf mailroom_${{ env.mailroom-version }}_linux_amd64.tar.gz mailroom
           ./mailroom -db=postgres://temba:temba@localhost:5432/temba?sslmode=disable -redis=redis://localhost:6379/10 -log-level=info > mailroom.log &
 
