--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ jobs:
   test:
     name: Test
     env:
+      python-version: "3.10.x"
       pg-version: "14"
       postgis-version: "3.2"
       redis-version: "6.2"
@@ -12,9 +13,6 @@ jobs:
       rpindexer-version: "7.5.0"
       mailroom-version: "7.5.33"
       DJANGO_SETTINGS_MODULE: temba.settings_ci
-    strategy:
-      matrix:
-        python-version: ["3.9.x", "3.10.x"]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -38,7 +36,7 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ env.python-version }}
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
