--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "react-dom": "16.13.1"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "tw-build": "postcss static/scss/tailwind.scss -o static/css/tailwind.css",
-    "tw-watch": "watch 'npm run tw-build' ./static/scss"
+    "tw-watch": "watch 'yarn run tw-build' ./static/scss"
   },
   "devDependencies": {
     "autoprefixer": "10.2.5",
@@ -35,9 +34,6 @@
     "postcss-simple-vars": "6.0.3",
     "tailwindcss": "2.0.4",
     "watch": "0.13.0"
-  },
-  "resolutions": {
-    "minimist": "1.2.5"
   },
   "vaadin": {
     "disableUsageStatistics": true
