--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,4 +1,4 @@
-name: Close inactive issues
+name: Close inactive issues and PRs
 on:
   schedule:
     - cron: "0 1 * * *"
@@ -15,8 +15,10 @@ jobs:
           days-before-issue-stale: 30
           days-before-issue-close: 14
           stale-issue-label: "inactive"
-          stale-issue-message: "This issue will be closed in 14 days if it remains inactive."
-          close-issue-message: "This issue was closed for inactivity. Open a new issue referencing it to continue the discussion."
+          stale-issue-message: "Without activity, this issue will be closed in 14 days."
+          close-issue-message: "This issue was closed for inactivity."
+          stale-pr-message: 'Without activity, this PR will be closed in 14 days.'
+          close-pr-message: 'This PR was closed for inactivity.'
           days-before-pr-stale: 30
-          days-before-pr-close: 10
+          days-before-pr-close: 14
           repo-token: ${{ secrets.GITHUB_TOKEN }}
