--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,18 +1,9 @@
 blank_issues_enabled: false
 
 contact_links:
-  - name: Getting Help
-    url: https://groups.google.com/g/rapidpro-dev
-    about: If you have a question about your own installation, ask a question on the dev list.
-  - name: Mailroom
-    url: https://github.com/nyaruka/mailroom/issues
-    about: Mailroom is responsible for flow execution, if your flow is misbehaving, the bug might belong here.
-  - name: Courier
-    url: https://github.com/nyaruka/courier/issues
-    about: If you have a specific channel type that isn't behaving properly it might belong here.
-  - name: RapidPro Archiver
-    url: https://github.com/nyaruka/rp-archiver/issues
-    about: Runs scheduled archiving of messages and runs
-  - name: RapidPro Indexer
-    url: https://github.com/nyaruka/rp-indexer/issues
-    about: Responsible for scheduled indexing of contact fields so they are searchable.
+  - name: Feature Requests
+    url: https://github.com/nyaruka/rapidpro/discussions/categories/ideas
+    about: Suggest a new feature to discuss before beginning development
+  - name: Questions
+    url: https://github.com/nyaruka/rapidpro/discussions/categories/q-a
+    about: Ask general questions about RapidPro
