--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Install PostgreSQL and PostGIS
         uses: nyaruka/postgis-action@v2.1.0
@@ -31,10 +31,10 @@ jobs:
       - name: Install Linux packages
         run: |
           sudo apt update
-          sudo apt install -y --no-install-recommends libgdal-dev gettext ffmpeg
+          sudo apt install -y --no-install-recommends libgdal-dev ffmpeg
 
       - name: Install Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ env.python-version }}
 
@@ -44,7 +44,7 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install Redis
-        uses: zhulik/redis-action@v1.0.0
+        uses: zhulik/redis-action@v1.1.0
         with:
           redis version: ${{ env.redis-version }}
 
@@ -54,7 +54,7 @@ jobs:
           elastic version: ${{ env.elastic-version }}
 
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.node-version }}
 
@@ -100,7 +100,7 @@ jobs:
 
       - name: Upload coverage
         if: success()
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
