--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install Redis
-        uses: zhulik/redis-action@v1.1.0
+        uses: zhulik/redis-action@1.1.0
         with:
           redis version: ${{ env.redis-version }}
 
