--- a/.github/workflows/build-rapidpro-push-tag-sp.yaml
+++ b/.github/workflows/build-rapidpro-push-tag-sp.yaml
@@ -78,7 +78,7 @@ jobs:
       - name: Build and push - Flows Varnish Image
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./docker
           labels: |
             tag=${{env.TAG}}
             commit=${{env.COMMIT_SHA}}
