Update phonenumbers library

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ gunicorn = "^20.0.4"
 iptools = "^0.7.0"
 iso-639 = "^0.4.5"
 iso8601 = "^0.1.14"
-phonenumbers = "*"
+phonenumbers = "^8.13.6"
 pycountry = "^20.7.3"
 python-dateutil = "^2.8.2"
 psycopg2-binary = "^2.9.1"
