--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ slack-sdk = "3.17.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
-coverage = {extras = ["toml"], version = "^6.5.0"}
+coverage = {extras = ["toml"], version = "^7.2.2"}
 isort = "^5.12.0"
 responses = "^0.12.1"
 beautifulsoup4 = "^4.9.3"
@@ -100,7 +100,7 @@ exclude_lines = [
     "raise AssertionError",
     "raise NotImplementedError",
 ]
-omit = ["*/tests*", "*settings*", "temba/*/management/commands/*"]
+omit = ["**/tests*", "*settings*", "temba/*/management/commands/*", "temba/tests/*"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
