Update to psycopg3 non-binary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,6 @@ iso8601 = "^0.1.14"
 phonenumbers = "^8.13.8"
 pycountry = "^22.3.5"
 python-dateutil = "^2.8.2"
-psycopg2-binary = "^2.9.1"
 packaging = "^22.0"
 requests-toolbelt = "^0.9.1"
 chardet = "^4.0.0"
@@ -56,6 +55,7 @@ openpyxl = "^3.1.2"
 ffmpeg-python = "^0.2.0"
 slack-sdk = "3.17.0"
 django-formtools = "^2.4.1"
+psycopg = "^3.1.9"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
