--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ xlsxlite = "^0.2.0"
 colorama = "^0.4.4"
 gunicorn = "^20.0.4"
 iptools = "^0.7.0"
-iso-639 = {git = "https://github.com/noumar/iso639.git", tag = "0.4.5"}  # https://github.com/python-poetry/poetry/issues/6996
+iso-639 = "^0.4.5"
 iso8601 = "^0.1.14"
 phonenumbers = "^8.13.16"
 pycountry = "^22.3.5"
