Add pillow dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,8 @@ ffmpeg-python = "^0.2.0"
 slack-sdk = "3.17.0"
 django-formtools = "^2.4.1"
 psycopg = "^3.1.9"
+pillow = "^10.1.0"
+django-imagekit = "^5.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
